/*
 *  Copyright 2020 Blockchain Technology Partners
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
package com.blockchaintp.sawtooth.daml.protobuf;
import "google/protobuf/timestamp.proto";

message DamlOperationBatch {
  string version = 1;
  repeated DamlOperation operations = 2;
}

message DamlOperation {
  string version = 1;
  oneof payload {
    DamlTransaction transaction = 2;
    DamlTransactionFragment largeTransaction = 5;
  };
  string submittingParticipant = 3;
  string correlationId = 4;
}

message DamlTransaction {
  string version = 1;
  bytes logEntryId = 2;
  bytes submission = 3;
}

message DamlTransactionFragment {
  string version = 1;
  bytes logEntryId = 2;
  int32 parts = 3;
  int32 partNumber = 4;
  bytes submissionFragment = 5;
  string contentHash = 6;
}

message DamlLogEvent {
  string version = 1;
  bytes logEntryId = 2;
  bytes logEntry = 3;
  bytes timeUpdate = 4;
}

message VersionedEnvelope {
  string version = 1;
  bytes data = 2;
  string contentHash = 3;
  int32 parts = 4;
  int32 partNumber = 5;
}
