// Copyright 2016 Blockchain Technology Partners 
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

option java_multiple_files = true;
package com.blockchaintp.sawtooth.daml.state.protobuf;
import "google/protobuf/timestamp.proto";
import "com/digitalasset/daml/lf/transaction.proto";

message DuplicateCommand {
	string party=1;
	string applicationId=2;
	string commandId=3;
	google.protobuf.Timestamp expiration=4;
}

message Contract {
	com.digitalasset.daml.lf.transaction.ContractInstance contract=1;
	bool archived=2;
}

message Package {
}


